no chaingt is section class="action

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
               <h3 class="action-title">
                 Мальдивские острова
               </h3>
-              <span class="action-title">от&nbsp;55&nbsp;000&nbsp;₽</span>
+              <p class="action-title">от&nbsp;55&nbsp;000&nbsp;₽</p>
               <a href="#" class="action-link">Подробнее</a>
             </article>
             <article class="offer-srticle">
               <h3 class="action-title">
                 Номера категории люкс
               </h3>
-              <span class="action-title">от&nbsp;5&nbsp;000&nbsp;₽</span>
+              <p class="action-title">от&nbsp;5&nbsp;000&nbsp;₽</p>
               <a href="#" class="action-link">Подробнее</a>
             </article>
           </div>
@@ -100,7 +100,7 @@
             <h3 class="action-title">
               Горящий тур на&nbsp;остров Крит
             </h3>
-              <span class="action-title">от&nbsp;30&nbsp;000&nbsp;р</span>
+            <p class="action-title">от&nbsp;30&nbsp;000&nbsp;р</p>
             <a href="#" class="action-link">Подробнее</a>
           </article>
         </div>
