changes were made to the cost of cards

--- a/index.html
+++ b/index.html
@@ -244,8 +244,13 @@
               <img src="./img/23.jpg" alt="Lagoona espa&ntilde;ola" class="Accommodation-img">
               <div class="article-text">
                 <div class="aticle-top">
-                  <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;4&nbsp;698&nbsp;₽
+                  <!-- <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;4&nbsp;698&nbsp;₽
                     /ночь
+                  </div> -->
+                  <div>
+                    <span class="article__prise-grey">от</span>
+                    4 698 р
+                    <span class="article__prise-dark">/ночь</span>
                   </div>
                   <div class="article-star">
                     <img src="./img/star-2.png" alt="Рейтинг отеля 4 из 5">
@@ -272,8 +277,13 @@
               <img src="./img/24.jpg" alt="Lagoona son t&iacute;picas" class="Accommodation-img">
               <div class="article-text">
                 <div class="article-top">
-                  <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;5&nbsp;148&nbsp;₽
+                  <!-- <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;5&nbsp;148&nbsp;₽
                     /ночь
+                  </div> -->
+                  <div>
+                    <span class="article__prise-grey">от</span>
+                    5 148 р
+                    <span class="article__prise-dark">/ночь</span>
                   </div>
                   <div class="article-star">
                     <img src="./img/star-2.png" alt="Рейтинг отеля 4 из 5">
@@ -300,8 +310,13 @@
               <img src="./img/26.jpg" alt="Lagoona de&nbsp;la&nbsp;guerra" class="Accommodation-img">
               <div class="article-text">
                 <div class="article-top">
-                  <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;6&nbsp;254&nbsp;₽
+                  <!-- <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;6&nbsp;254&nbsp;₽
                     /ночь
+                  </div> -->
+                  <div>
+                    <span class="article__prise-grey">от</span>
+                    6 254 р
+                    <span class="article__prise-dark">/ночь</span>
                   </div>
                   <div class="article-star">
                     <img src="./img/star-2.png" alt="Рейтинг отеля 4 из 5">
@@ -328,8 +343,13 @@
               <img src="./img/29-1.jpg" alt="Lagoona mentira piadosa" class="Accommodation-img">
               <div class="article-text">
                 <div class="article-top">
-                  <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;6&nbsp;320&nbsp;₽
+                  <!-- <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;6&nbsp;320&nbsp;₽
                     /ночь
+                  </div> -->
+                  <div>
+                    <span class="article__prise-grey">от</span>
+                    6 320 р
+                    <span class="article__prise-dark">/ночь</span>
                   </div>
                   <div class="article-star">
                     <img src="./img/star-2.png" alt="Рейтинг отеля 4 из 5">
@@ -356,8 +376,13 @@
               <img src="./img/30.jpg" alt="Lagoona empujar la&nbsp;creatividad" class="Accommodation-img">
               <div class="article-text">
                 <div class="article-top">
-                  <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;6&nbsp;457&nbsp;₽
+                  <!-- <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;6&nbsp;457&nbsp;₽
                     /ночь
+                  </div> -->
+                  <div>
+                    <span class="article__prise-grey">от</span>
+                    6 457 р
+                    <span class="article__prise-dark">/ночь</span>
                   </div>
                   <div class="article-star">
                     <img src="./img/star-2.png" alt="Рейтинг отеля 4 из 5">
@@ -384,8 +409,13 @@
               <img src="./img/31.jpg" alt="Lagoona el&nbsp;retorno" class="Accommodation-img">
               <div class="article-text">
                 <div class="article-top">
-                  <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;6&nbsp;320&nbsp;₽
+                  <!-- <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;6&nbsp;320&nbsp;₽
                     /ночь
+                  </div> -->
+                  <div>
+                    <span class="article__prise-grey">от</span>
+                    6 320 р
+                    <span class="article__prise-dark">/ночь</span>
                   </div>
                   <div class="article-star">
                     <img src="./img/star-2.png" alt="Рейтинг отеля 4 из 5">
@@ -412,8 +442,13 @@
               <img src="./img/29-1.jpg" alt="Lagoona mentira piadosa" class="Accommodation-img">
               <div class="article-text">
                 <div class="article-top">
-                  <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;6&nbsp;505&nbsp;₽
+                  <!-- <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;6&nbsp;505&nbsp;₽
                     /ночь
+                  </div> -->
+                  <div>
+                    <span class="article__prise-grey">от</span>
+                    6 505 р
+                    <span class="article__prise-dark">/ночь</span>
                   </div>
                   <div class="article-star">
                     <img src="./img/star-2.png" alt="Рейтинг отеля 4 из 5">
@@ -440,8 +475,13 @@
               <img src="./img/28.jpg" alt="Lagoona suerte sigui&oacute; siempre" class="Accommodation-img">
               <div class="article-text">
                 <div class="article-top">
-                  <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;6&nbsp;824&nbsp;₽
+                  <!-- <div class="WXMFC b" data-sizegroup="hr_chevron_prices">от&nbsp;6&nbsp;824&nbsp;₽
                     /ночь
+                  </div> -->
+                  <div>
+                    <span class="article__prise-grey">от</span>
+                    6 854 р
+                    <span class="article__prise-dark">/ночь</span>
                   </div>
                   <div class="article-star">
                     <img src="./img/star-2.png" alt="Рейтинг отеля 4 из 5">
