added file stile.css

--- a/index.html
+++ b/index.html
@@ -30,32 +30,32 @@
       <nav class="header-nav">
         <ul class="header-list">
           <li class="header-list-item">
-            <a href="О&nbsp;нас" class="header-link">
+            <a href="#О&nbsp;нас" class="header-link">
               О&nbsp;нас
             </a>
           </li>
           <li class="header-list-item">
-            <a href="услуги" class="header-link">
+            <a href="#servises" class="header-link">
               Услуги
             </a>
           </li>
           <li class="header-list-item">
-            <a href="преимущества" class="header-link">
+            <a href="#advantages" class="header-link">
               Преимущества
             </a>
           </li>
           <li class="header-list-item">
-            <a href="размещение" class="header-link">
+            <a href="#accommodation" class="header-link">
               Размещение
             </a>
           </li>
           <li class="header-list-item">
-            <a href="блог" class="header-link">
+            <a href="#blog" class="header-link">
               Блог
             </a>
           </li>
           <li class="header-list-item">
-            <a href="контакты" class="header-link">
+            <a href="#contacts" class="header-link">
               Контакты
             </a>
           </li>
