added file normolize.css , and finished header

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lagoona &#9764;</title>
+  <link rel="stylesheet" href="css/normolize.css">
+  <link rel="stylesheet" href="css/stile.css">
 </head>
 
 <body>
   <header class="header">
     <div class="conteiner">
-      <div>
-        <div>
+      <div class="header-top flex">
+        <div class="header-left flex header-conteiner">
           <a href="#" class="header-logo">
             <img src="./img/logo.svg" alt="Lagoona" class="header-logo">
           </a>
@@ -21,14 +23,15 @@
             +7&nbsp;495 322-54-48
           </a>
         </div>
-
-        <a href="#" class="heder-box">
-          Личный кабинет
-        </a>
-
+        <div class="header-right flex header-conteiner">
+          <a href="#" class="heder-box">
+            Личный кабинет
+          </a>
+        </div>
       </div>
-      <nav class="header-nav">
-        <ul class="header-list">
+
+      <nav class="header-nav flex">
+        <ul class="list-reset header-list flex">
           <li class="header-list-item">
             <a href="#О&nbsp;нас" class="header-link">
               О&nbsp;нас
@@ -61,7 +64,7 @@
           </li>
 
         </ul>
-        <div class="htader-btn">
+        <div class="btn-reset header-btn flex">
           <button class="btn">
             Хочу тур
           </button>
@@ -129,7 +132,7 @@
         <h2 class="section-title">
           Услуги
         </h2>
-        <ul class="servises-items">
+        <ul class="servises-items list-reset">
           <li class="servises-items">
             <h3 class="servises-item-title">
               <a href="#">Эксклюзивное обслуживание</a>
@@ -172,7 +175,7 @@
         <h2 class="advantages-title">
           Преимущества
         </h2>
-        <ul class="Advantages-items">
+        <ul class="Advantages-items list-reset">
           <li class="Advantages-items">
             <div>
               <p class="Advantages-items-list">
@@ -238,7 +241,7 @@
         <h2 class="Accommodation-title">
           Размещение
         </h2>
-        <ul class="Accommodation">
+        <ul class="Accommodation list-reset">
           <li class="Accommodation">
             <article class="placement-article">
               <img src="./img/23.jpg" alt="Lagoona espa&ntilde;ola" class="Accommodation-img">
